compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__control__tests__unconnected_jump_generated_as_empty_statement-2.snap
---
source: compiler/plc_xml/src/xml_parser/control.rs
expression: diagnostics
---
[
    Diagnostic {
        message: "Control statement has no connection",
        primary_location: SourceLocation {
            span: Block {
                local_id: 2,
                execution_order: Some(
                    1,
                ),
                inner_range: None,
            },
        },
        secondary_locations: None,
        severity: Error,
        error_code: "E081",
        sub_diagnostics: [],
        internal_error: None,
    },
]
