compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__control__tests__unnamed_controls-2.snap
---
source: compiler/plc_xml/src/xml_parser/control.rs
expression: diagnostics
---
[
    SemanticError {
        message: "Unnamed control",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 1,
                    execution_order: Some(
                        0,
                    ),
                    inner_range: None,
                },
            },
        ],
        err_no: cfc__unnamed_control,
    },
    SemanticError {
        message: "Unnamed control",
        range: [
            SourceLocation {
                span: Block {
                    local_id: 2,
                    execution_order: Some(
                        1,
                    ),
                    inner_range: None,
                },
            },
        ],
        err_no: cfc__unnamed_control,
    },
]
