compiler/plc_xml/src/xml_parser/snapshots/plc_xml__xml_parser__control__tests__unnamed_controls.snap
---
source: compiler/plc_xml/src/xml_parser/control.rs
expression: ast
---
CompilationUnit {
    global_vars: [],
    units: [
        POU {
            name: "program_0",
            variable_blocks: [],
            pou_type: Program,
            return_type: None,
        },
    ],
    implementations: [
        Implementation {
            name: "program_0",
            type_name: "program_0",
            linkage: Internal,
            pou_type: Program,
            statements: [
                EmptyStatement,
                EmptyStatement,
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "x",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralBool {
                        value: false,
                    },
                },
            ],
            location: SourceLocation {
                span: None,
            },
            name_location: SourceLocation {
                span: None,
            },
            overriding: false,
            generic: false,
            access: None,
        },
    ],
    user_types: [],
    file_name: "<internal>",
}
